--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "small app for adding, saving and showing blogs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --inspect index.js",
-    "test": "test",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
@@ -27,12 +27,17 @@
   "devDependencies": {
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
